<resources>
    <string name="app_name">Займы</string>

    <string name="loan_list_divider">Разделитель</string>
    <string name="profile_button">Инструкция</string>
    <string name="profile_title">Способы получения денежных средств:</string>

    <string name="menu_home">Главная</string>
    <string name="menu_loan">Займы</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_refresh">Обновить</string>
    <string name="menu_back">Закрыть детализацию</string>
    <string name="menu_logout">Сменить пользователя</string>

    <string name="create_loan_button">Отправить заявку</string>
    <string name="first_name_field">Введите имя</string>
    <string name="last_name_field">Введите фамилию</string>
    <string name="phone_field">Введите номер телефона</string>

    <string name="loan_info_title">Информация о займе:</string>
    <string name="loan_info_amount">Сумма:</string>
    <string name="loan_info_percent">Процентная ставка:</string>
    <string name="loan_info_period">Срок:</string>
    <string name="loan_info_date">Дата:</string>
    <string name="loan_info_phone">Номер телефона:</string>
    <string name="loan_info_first_name">Имя:</string>
    <string name="loan_info_last_name">Фамилия:</string>
    <string name="loan_info_state">Статус:</string>

    <string name="auth_title">Войдите или зарегистрируйтесь:</string>
    <string name="auth_registration_button_text">Регистрация</string>
    <string name="auth_login_button_text">Вход</string>
    <string name="auth_login_field">Введите логин</string>
    <string name="auth_password_field">Введите пароль</string>

    <string name="how_get_loan_guide">
        Для получения суммы займа в виде наличных денежных средств обратитесь в одно из отделений банков-партнеров.
        При себе необходимо иметь паспорт и телефон для получения кода подверждения операции.\n\n
        Для получения суммы займа безналично на банковскую карту необходимо заполнить электронное заявление с указанием номера карты и телефона, к которому она привязана.
        После проверки заявления сотрудником банка и подтверждения операции по SMS денежные средства будут зачислены на ваш банковский счет.
    </string>

</resources>