<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/auth_title"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/auth_title" />

    <EditText
        android:id="@+id/login_edit_text"
        style="@style/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/auth_login_field"
        android:autofillHints="@string/auth_login_field"/>

    <EditText
        android:id="@+id/password_edit_text"
        style="@style/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/auth_password_field"
        android:autofillHints="@string/auth_password_field"
        android:inputType="textPassword"/>

    <LinearLayout
        android:id="@+id/auth_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_button"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/auth_login_button_text" />

        <Button
            android:id="@+id/registration_button"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/auth_registration_button_text" />

    </LinearLayout>

</LinearLayout>