<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".ui.MainActivity">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/amount_loan_condition_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="20sp"
        tools:text="Сумма займа"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/percent_loan_condition_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="20sp"
        tools:text="Процентаная ставка"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/period_loan_condition_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="20sp"
        tools:text="Срок займа"/>

    <EditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/first_name_field"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="@string/first_name_field" />

    <EditText
        android:id="@+id/last_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/last_name_field"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="@string/last_name_field" />

    <EditText
        android:id="@+id/phone_number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/phone_field"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="@string/phone_field" />

    <Button
        android:id="@+id/createNewLoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/create_loan_button" />

</LinearLayout>